--- a/app/src/main/res/layout/model_layout_recyclerview_dashboard.xml
+++ b/app/src/main/res/layout/model_layout_recyclerview_dashboard.xml
@@ -8,12 +8,13 @@
     app:cardCornerRadius="5dp"
     app:cardElevation="15dp">
 
-            <TextView
-                android:id="@+id/textViewId"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:padding="10dp"
-                android:text="@string/name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    <TextView
+        android:id="@+id/textViewId"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:text="@string/name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </android.support.v7.widget.CardView>
